# MeshConverter

./: .clinerules  .gitignore  ALL_SHAPES_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  CONVERSION_SUMMARY.md  CONVERT_GUIDE.md  GPT4_VISION_IMPLEMENTATION.md  LAYER_SLICING_CLI_COMPLETE.md  LAYER_SLICING_COMPLETE.md  LICENSE  MULTI_SEGMENT_RECONSTRUCTION_PLAN.md  PHASE_INTEGRATION_GUIDE.md  PLAN_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART_GPT4_VISION.md  README.md  RESEARCH_SUMMARY.md  WATERTIGHT_QUICKSTART.md  config.yaml  env.example  install_gpt4_vision.sh  mesh_to_primitives.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_freecad_headless.py  test_multiview_validation.py  test_phase6.py
.claude/: CLAUDE.md  settings.local.json
.github/: copilot-instructions.md
.serena/: project.yml
.serena/memories/: creating_watertight_solids.md  mesh_conversion_research_summary.md  setup_and_troubleshooting_guide.md  watertight_solution_summary.md
core/: bbox_utils.py  decomposer.py  mesh_loader.py  normalizer.py  pattern_matcher.py
detection/: ai_detector.py  simple_detector.py
docs/: ALL_SHAPES_GUIDE.md  CONVERSION_SUMMARY.md  CONVERT_GUIDE.md  DEPLOYMENT_READY.md  IMPLEMENTATION_COMPLETE.md  PHASE6_QUICKREF.md  PHASE_4A_CV_ENHANCEMENT.md  PHASE_4A_SUMMARY.md  PHASE_INTEGRATION_GUIDE.md  PROGRESS_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START_MULTISEGMENT.md  README.md  RESEARCH_PLAN.md  SESSION_MEMORY.md  SESSION_SUMMARY.md  VISION_LAYER_ANALYSIS_GUIDE.md  VISION_PHASE1_RESULTS.md
docs/archived/: FILE_DIRECTORY.md  GETTING_STARTED.md  GPT4_VISION_GUIDE.md  PHASE6_ANALYSIS.md  PHASE6_DECOMPOSITION.md  PHASE6_REPORT.md  PROJECT_REORGANIZATION_COMPLETE.md  PROJECT_STATUS.md
docs/dev/: agents_progress.md  parallel_agents_status.md  task_completion.md  voxelization_results.md
docs/guides/: GPT4_VISION_GUIDE.md  gpt4_vision_implementation.md  quickstart_gpt4_vision.md
docs/research/: alternative_approaches.md
meshconverter/: __init__.py  cli.py  convert.py
meshconverter/classification/: __init__.py  vision_classifier.py  voxel_classifier.py
meshconverter/reconstruction/: __init__.py  hybrid_reconstructor.py  layer_analyzer.py  layer_wise_stacker.py  multiview_detector.py  outlier_removal.py  vision_layer_analyzer.py
meshconverter/validation/: cv_validator.py  multiview_validator.py  visual_comparator.py
primitives/: __init__.py  base.py  box.py  cone.py  cylinder.py  sphere.py
scripts/: README.md  __init__.py  analyze_battery_layers.py  baseline_multiview_analysis.py  batch_convert.py  bpa_convert.py  bpa_convert_watertight.py  convert_mesh.py  convert_mesh_allshapes.py  create_battery_test_case.py  demo_hybrid_reconstruction.py  demo_multisegment_reconstruction.py  examples.py  mesh_to_cad_converter.py  quick_convert.py  robust_convert.py  setup.bat  setup.sh  setup_environment.py  test_converter.py  test_visual_comparison.py  visualize_results.py
tests/: test_layer_wise_stacking.py  test_primitives.py  test_vision_layer_analysis.py
tests/integration/: test_gpt4_vision.py  test_pipeline.py
tests/samples/: simple_cylinder_optimized.json
tests/unit/: test_detector.py  test_loader.py
validation/: validator.py
